:bug: (fix ui) align text for components

--- a/src/components/NoFavoriteHeroesAdded/NoFavoriteHeroesAdded.module.scss
+++ b/src/components/NoFavoriteHeroesAdded/NoFavoriteHeroesAdded.module.scss
@@ -12,6 +12,7 @@
   }
 
   &__Description {
+    text-align: center;
     color: white;
     font-size: 16px;
   }
