--- a/src/components/NoSearchResultsFound/NoSearchResultsFound.module.scss
+++ b/src/components/NoSearchResultsFound/NoSearchResultsFound.module.scss
@@ -6,6 +6,7 @@
   padding: 64px 16px;
 
   &__Description {
+    text-align: center;
     color: white;
     font-size: 16px;
   }
